[package]
name = "deltactl"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
deltalake = "0.20.1"
humantime = "2.1.0"
serde = "1.0.217"
serde_json = "1.0.137"
tokio = "1.40.0"
url = "2.5.2"
anyhow = "1.0.95"

[features]
azure = [ "deltalake/azure" ]
s3 = [ "deltalake/s3" ]

[profile.release]
strip = true
lto = true
codegen-units = 1
